--- a/style.css
+++ b/style.css
@@ -2841,7 +2841,7 @@ canvas {
     }
 
     .carousel-visimisi {
-        margin-top: 8px;
+        margin-top: 0;
     }
 
     .carousel-track-visimisi {
