--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ body {
     /* SEMUA ukuran layar awalnya sembunyi */
     position: fixed;
     inset: 0;
-    z-index: 999;
+    z-index: 1001;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
@@ -938,7 +938,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    
+
 }
 
 .container-panduan h1 {
@@ -1064,7 +1064,7 @@ body {
 .cpt-title {
     font-family: PP Neue Corp Wide, sans-serif;
     font-size: 80px;
-    color:  #31c8ff;
+    color: #31c8ff;
     margin-bottom: 15px;
     text-shadow: 5px 5px 20px rgba(255, 255, 255, 0.603);
 }
@@ -1321,7 +1321,7 @@ body {
 
 }
 
-.title-master span{
+.title-master span {
     color: #31c8ff;
     text-shadow: 5px 5px 20px rgba(255, 255, 255, 0.603);
 }
@@ -1913,7 +1913,7 @@ canvas {
     .parallax__content {
         padding: 0 100px 50px 100px;
         margin-top: 100px;
-        padding:  0 100px 50px 100px;
+        padding: 0 100px 50px 100px;
         text-align: center;
     }
 
@@ -2037,7 +2037,7 @@ canvas {
         margin-bottom: 0;
     }
 
-    .benefits h2{
+    .benefits h2 {
         margin-top: 10px;
     }
 
@@ -2058,29 +2058,29 @@ canvas {
         padding: 70px 70px;
     }
 
-    .container-unggulan h1{
+    .container-unggulan h1 {
         font-size: 48px;
     }
 
     .card-unggulan {
         width: 90%;
-        
+
     }
 
-    .container-unggulan img{
-        width:85%;
+    .container-unggulan img {
+        width: 85%;
         justify-content: center;
         margin: 0 auto;
     }
 
-    
+
     .button-unggulan {
         margin-left: 1vh;
     }
 
-    
 
-    
+
+
 
 
     .container-cpt-utama {
@@ -2132,12 +2132,15 @@ canvas {
         width: 30%;
         font-size: 15px;
     }
+
     .container-kontak {
         padding: 0 40px;
     }
+
     .title-master {
         padding: 0 10px;
     }
+
     .button-kontak {
         margin-right: 15px;
     }
@@ -2189,11 +2192,9 @@ canvas {
         font-size: 17px;
     }
 
-    .colum-kedua {}
-
     .colum-kedua img {
-        width: 200px;
-        height: 150px;
+        width: 70%;
+        height: auto;
     }
 
     .btn-awal {
@@ -2278,16 +2279,16 @@ canvas {
         margin: 10px 0 10px 0;
 
     }
-    
+
     .container-vip {
         margin: 0 0;
     }
 
-    .header-vip p{
+    .header-vip p {
         padding: 0 50px;
     }
 
-    .benefits h2{
+    .benefits h2 {
         margin-left: 30px;
     }
 
@@ -2410,16 +2411,16 @@ canvas {
         height: auto;
     }
 
-    .container-unggulan h1{
+    .container-unggulan h1 {
         font-size: 35px;
     }
 
     .card-unggulan {
         padding: 10px 0 0 0;
-    
+
     }
 
-    .card-unggulan img{
+    .card-unggulan img {
         width: 100%;
         height: auto;
     }
@@ -2449,9 +2450,10 @@ canvas {
     .parallax__header {
         text-align: center;
     }
+
     .parallax__content {
         text-align: center;
-        
+
     }
 
     .blur-card {
@@ -2470,6 +2472,7 @@ canvas {
     .trading-room {
         font-size: 25px;
     }
+
     .colum-awal {
         font-size: 20px;
         margin: 0 0 0 0;
@@ -2489,7 +2492,7 @@ canvas {
         align-items: center;
         flex-direction: column;
     }
-    
+
     .colum-kedua img {
         width: 400px;
         height: auto;
@@ -2728,7 +2731,7 @@ canvas {
     .container-panduan {
         margin-top: 20px;
         padding: 30px 15px;
-       
+
     }
 
     .container-panduan h1 {
@@ -2825,10 +2828,12 @@ canvas {
         margin-top: 30px;
         padding: 10px 0 0 0;
     }
-    .container-unggulan h1{
+
+    .container-unggulan h1 {
         margin-bottom: 10px;
         font-size: 25px;
     }
+
     .card-unggulan {
         width: 100%;
         height: 100%;
@@ -2950,7 +2955,8 @@ canvas {
     }
 
 
-    .modal .prev, .modal .next {
+    .modal .prev,
+    .modal .next {
         padding: 5px 12px 8px 12px;
     }
 
