--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
+    image-rendering: optimizeSpeed;
 }
 
 
