--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
+
 body {
     margin: 0;
     padding: 0;
-    background-image: url('img/forex.png');
+  
+}
+
+.bg-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('img/bgdr.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     image-rendering: optimizeSpeed;
-}
-
-
+    z-index: -1;
+  }
 
 
 
